istio/traffic/egress-sni/networking.yaml
# Define a new listener that enforces Istio mTLS on inbound connections.
# This is where sidecar will route the application traffic, wrapped into
# Istio mTLS.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egressgateway
  namespace: istio-system
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 8443
        name: tls-egress
        protocol: TLS
      hosts:
        - "*"
      tls:
        mode: ISTIO_MUTUAL

---
# VirtualService that will instruct sidecars in the mesh to route the outgoing
# traffic to the egress gateway Service if the SNI target hostname matches
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-wildcard-through-egress-gateway
  namespace: istio-system
spec:
  hosts:
    - "*.baidu.com"
    - "*.wikipedia.org"
  gateways:
    - mesh
    - egressgateway
  tls:
    - match:
        - gateways:
            - mesh
          # port: 443
          sniHosts:
            - "*.baidu.com"
            - "*.wikipedia.org"
      route:
        - destination:
            host: egressgateway.istio-egress.svc.cluster.local
            subset: wildcard
  # Dummy routing instruction. If omitted, no reference will point to the Gateway
  # definition, and istiod will optimise the whole new listener out.
  tcp:
    - match:
        - gateways:
            - egressgateway
          port: 8443
      route:
        - destination:
            host: "dummy.local"
          weight: 100

---
# Instruct sidecars to use Istio mTLS when sending traffic to the egress gateway
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway
  namespace: istio-system
spec:
  host: egressgateway.istio-egress.svc.cluster.local
  subsets:
    - name: wildcard
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---
# Put the remote targets into the Service Registry
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: wildcard
  namespace: istio-system
spec:
  hosts:
    - "*.baidu.com"
    - "*.wikipedia.org"
  ports:
    - number: 443
      name: tls
      protocol: TLS
    - number: 8443
      name: tls-8443
      protocol: TLS

---
# And finally, the configuration of the SNI forwarder,
# it's internal listener, and the patch to the original Gateway
# listener to route everything into the SNI forwarder.
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: sni-magic
  namespace: istio-system
spec:
  configPatches:
    - applyTo: CLUSTER
      match:
        context: GATEWAY
      patch:
        operation: ADD
        value:
          name: sni_cluster
          load_assignment:
            cluster_name: sni_cluster
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        envoy_internal_address:
                          server_listener_name: sni_listener
    - applyTo: CLUSTER
      match:
        context: GATEWAY
      patch:
        operation: ADD
        value:
          name: dynamic_forward_proxy_cluster
          lb_policy: CLUSTER_PROVIDED
          cluster_type:
            name: envoy.clusters.dynamic_forward_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
              dns_cache_config:
                name: dynamic_forward_proxy_cache_config
                dns_lookup_family: V4_ONLY
    - applyTo: LISTENER
      match:
        context: GATEWAY
      patch:
        operation: ADD
        value:
          name: sni_listener
          internal_listener: {}
          listener_filters:
            - name: envoy.filters.listener.tls_inspector
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
          filter_chains:
            - filter_chain_match:
                server_names:
                  - "*.baidu.com"
                  - "*.wikipedia.org"
              filters:
                - name: envoy.filters.set_filter_state
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.set_filter_state.v3.Config
                    on_new_connection:
                      # - object_key: envoy.upstream.dynamic_host
                      #   format_string:
                      #     text_format_source:
                      #       inline_string: "google.com"
                      - object_key: envoy.upstream.dynamic_port
                        format_string:
                          text_format_source:
                            inline_string: "%CEL(source.port)%"
                - name: envoy.filters.network.sni_dynamic_forward_proxy
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.sni_dynamic_forward_proxy.v3.FilterConfig
                    port_value: 8443
                    dns_cache_config:
                      name: dynamic_forward_proxy_cache_config
                      dns_lookup_family: V4_ONLY
                - name: envoy.tcp_proxy
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                    stat_prefix: tcp
                    cluster: dynamic_forward_proxy_cluster
                    access_log:
                      - name: envoy.access_loggers.file
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                          path: "/dev/stdout"
                          log_format:
                            text_format_source:
                              inline_string:
                                '[all] [%CEL(source.port)%] [%HOSTNAME%] [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%
                                %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS%
                                "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION%
                                %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%"
                                "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER%
                                %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS%
                                %REQUESTED_SERVER_NAME% %ROUTE_NAME%
                                '
    - applyTo: NETWORK_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.tcp_proxy"
      patch:
        operation: MERGE
        value:
          name: envoy.tcp_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
            stat_prefix: tcp
            cluster: sni_cluster
